# portal-play

./: CMakeLists.txt  GameStateController.cpp  GameStateController.h  IntrinsicCameraParameters.h  LocalPlayer.cpp  LocalPlayer.h  README.md  RemotePlayer.cpp  RemotePlayer.h  bird.cpp  bird.h  bullet.cpp  bullet.h  camera_handler.cpp  camera_handler.h  drawer.cpp  drawer.h  intrinsic_parameters.txt  main.cpp  overview.txt  player.cpp  player.h
network/: CMakeLists.txt  INetworkReceiver.h  INetworkSender.h  IReceiverCallback.h  ISenderCallback.h  NetworkReceiver.cpp  NetworkReceiver.h  NetworkSender.cpp  NetworkSender.h  NetworkTest.cpp  Protocol.h  Util.cpp  Util.h
webrtc/: .ycm_extra_conf.py  CMakeLists.txt  WebRtcConnector.cpp  WebRtcDefinitions.h  WebRtcEngine.cpp  WebRtcEngine.h
